# Wareflow-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  start-docker.sh
.github/workflows/: deploy.yaml
app/: Dockerfile  config.py  crud.py  main.py  pyproject.toml  router.py  schemas.py
app/api/: __init__.py  deps.py
app/api/auth/crud/: tenant.py  user.py
app/api/auth/models/: tenant.py  user.py
app/api/auth/schemas/: login.py
app/api/auth/services/: login.py
app/api/products/: router.py
app/api/products/models/: __init__.py  product.py
app/api/products/services/: product.py
app/api/products/v1/: product.py  router.py
app/api/products/v1/request/: product.py
app/api/products/v1/response/: product.py
app/api/tenant/: router.py
app/api/tenant/models/: __init__.py  tenant.py
app/api/tenant/services/: tenant.py
app/api/tenant/v1/: router.py  tenant.py
app/api/tenant/v1/request/: tenant.py
app/api/tenant/v1/response/: tenant.py
app/core/: config.py  router.py  security.py
app/db/: base.py  init_db.py  session.py
backend/: Dockerfile.fastapi  alembic.ini  pyproject.toml
backend/app/: alembic.ini  main.py
backend/app/core/: api_response.py  config.py  custom_json_encode.py  enums.py  jwt.py  logging.py  router.py  security.py
backend/app/db/: base.py  base_class.py  init_db.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 149b2ade4f64_adde_new_col_named_as_slug_in_product_.py  79bf564aceb6_added_new_table.py  (+8 more)
caddy/: Caddyfile  Dockerfile.caddy
(+57 files in other folders)
